--- a/css/main.css
+++ b/css/main.css
@@ -29,22 +29,22 @@
   width: 100%; }
   @media (min-width: 576px) {
     .container-sm {
-      max-width: 240px; } }
+      max-width: 340px; } }
   @media (min-width: 768px) {
     .container-sm {
-      max-width: 420px; } }
+      max-width: 320px; } }
   @media (min-width: 992px) {
     .container-sm {
-      max-width: 660px; } }
+      max-width: 560px; } }
   @media (min-width: 1200px) {
     .container-sm {
-      max-width: 840px; } }
+      max-width: 740px; } }
   @media (min-width: 1400px) {
     .container-sm {
-      max-width: 1020px; } }
+      max-width: 980px; } }
   @media (min-width: 1700px) {
     .container-sm {
-      max-width: 1352px; } }
+      max-width: 1252px; } }
 
 .header {
   width: 100%;
@@ -317,7 +317,7 @@
     @media (min-width: 1199px) {
       .footer__contact__phone {
         grid-template-columns: repeat(3, 1fr);
-        width: 50%;
+        width: 60%;
         padding: 40px 0;
         gap: 10px; } }
     .footer__contact__phone__item {
@@ -345,7 +345,7 @@
     padding-bottom: 60px; }
     @media (min-width: 1199px) {
       .footer__contact__email_location {
-        width: 50%;
+        width: 60%;
         flex-direction: row;
         gap: 30px; } }
     .footer__contact__email_location__item {
@@ -433,7 +433,7 @@
   0% {
     transform: translateX(-200%); } }
     .service_home__text h1 {
-      width: 50%;
+      width: 60%;
       font-size: 63px;
       line-height: 1.3em;
       color: #FFFFFF;
@@ -451,7 +451,7 @@
     .service_home__text hr {
       width: 98px;
       margin: auto;
-      border: 8px solid #FFCB00; }
+      border: 5px solid #FFCB00; }
   .service_home__text_two {
     width: 100%;
     border-top: 5px solid rgba(0, 0, 0, 0.45);
@@ -492,15 +492,19 @@
 .clients {
   width: 100%;
   height: auto;
+  background-color: white;
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: auto;
   flex-direction: column;
   padding: 20px 0; }
   @media (min-width: 1199px) {
     .clients {
-      height: 900px;
-      padding: 50px 0; } }
+      height: auto;
+      position: relative;
+      overflow: hidden;
+      padding: 60px 0; } }
   .clients h1 {
     font-size: 23px;
     color: black;
@@ -508,16 +512,25 @@
     line-height: normal;
     padding: 20px 0;
     text-align: center; }
+    @media (min-width: 1199px) {
+      .clients h1 {
+        font-size: 40px; } }
   .clients hr {
     width: 98px;
     margin: auto;
-    border: 8px solid #FFCB00; }
+    border: 5px solid #FFCB00; }
   .clients__grid {
+    width: 100%;
+    height: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 30px;
     padding-top: 20px; }
     @media (min-width: 1199px) {
+      .clients__grid {
+        grid-template-columns: repeat(4, 1fr);
+        gap: 20px; } }
+    @media (min-width: 1400px) {
       .clients__grid {
         grid-template-columns: repeat(5, 1fr);
         gap: 20px; } }
