--- a/scss/components/_clients.scss
+++ b/scss/components/_clients.scss
@@ -1,12 +1,17 @@
 .clients{
     width: 100%;
     height:auto;
+    background-color: white;
    @include flex-center-center;
+    margin: auto;
     flex-direction: column;
     padding: 20px 0;
 
     @media(min-width:1199px){
-        height:900px;
+        height:auto;
+        position: relative;
+	    overflow: hidden;
+        padding: 60px 0;
     }
 
 
@@ -17,22 +22,33 @@
         line-height: normal;
         padding: 20px 0;
         text-align: center;
+
+        @media(min-width:1199px){
+            font-size: 40px;
+        }
     }
 
 
     hr{
         width: 98px;
         margin: auto;
-        border: 8px solid $mikado_yellow;
+        border: 5px solid $mikado_yellow;
     }
 
     &__grid{
+        width: 100%;
+        height: 100%;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 30px;
         padding-top: 20px;
 
         @media(min-width:1199px){
+            grid-template-columns: repeat(4, 1fr);
+            gap: 20px;
+        }
+
+        @media(min-width:1400px){
             grid-template-columns: repeat(5, 1fr);
             gap: 20px;
         }
