--- a/scss/components/_clients.scss
+++ b/scss/components/_clients.scss
@@ -42,6 +42,15 @@
         grid-template-columns: repeat(2, 1fr);
         gap: 30px;
         padding-top: 20px;
+        animation-name: animation;
+        animation-duration: 4s;
+        animation-iteration-count:initial;
+        @keyframes animation {
+            0%{
+                transform: scale(0.1)
+            }
+            
+        }
 
         @media(min-width:1199px){
             grid-template-columns: repeat(4, 1fr);
