--- a/scss/components/_service.scss
+++ b/scss/components/_service.scss
@@ -18,34 +18,34 @@
      
         @media(min-width: 1199px){
             width: 100%;
+            height: 100%;
             object-fit: cover;
-            position: absolute;
+            position: relative;
         }
     }
 
 
     &__text{
         width: 100%;
-        position: absolute;
-        bottom: -17%;
-        z-index: 0;
+        position: relative;
+        top: -45%;
+        z-index: 1;
         background-color: rgba(0, 0, 0, 0.45);
-        @include flex-center-center;
         padding: 60px 0;
         display: none;
 
        
         @media(min-width:1199px){
-            display: block;
+            @include flex-center-center;
         }
 
         .container-sm{
-            animation-name: animation;
+            animation-name: animationService;
             animation-duration: 4s;
             animation-iteration-count:initial;
         }
 
-        @keyframes animation {
+        @keyframes animationService {
             0%{
                 transform: translateX(-200%);
             }
@@ -54,14 +54,18 @@
    
 
         h1{
-            width: 60%;
-            font-size: 63px;
+            width: 100%;
+            font-size: 53px;
             line-height: 1.3em;
             color: $white;
             font-weight: normal;
             margin: auto;
             text-align: center;
             padding-bottom: 22px;
+            @media(min-width: 1700px){
+                width: 60%;
+                font-size: 63px;
+            }
         }
 
         h2{
