--- a/scss/globals/_colors.scss
+++ b/scss/globals/_colors.scss
@@ -1,4 +1,4 @@
-$onyx: #121013;
+$black: #000000;
 $white: #FFFFFF;
 
 $heavy_metal:#2F2E2E;
@@ -9,8 +9,10 @@ $candlelight:#FFDA1F;
 
 $storm_dust:#5E5E5E;
 $carbon_grey:#605E5E;
+$star_dust:#A0A09F ;
 
 $vibrant_green:#0EE62F;
 
 $cobalt:#1D3E99;
+$mariner:#3A61CF;
 
