--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,6 +20,10 @@
 @import 'components/we_ensure';
 @import 'components/price';
 @import 'components/experts';
+@import 'components/quote';
+@import 'components/why_we';
+@import 'components/urgent';
+@import 'components/imagen';
 
 
 
