--- a/css/main.css
+++ b/css/main.css
@@ -843,6 +843,113 @@
     background-color: transparent;
     border: 1px solid white; }
 
+.why_we {
+  width: 100%;
+  height: 100%;
+  background-color: #000000;
+  padding: 30px 0; }
+  .why_we .container-sm {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column; }
+  .why_we h1 {
+    width: 50%;
+    color: #FFCB00;
+    line-height: 0.8em;
+    text-align: center;
+    font-size: 34px;
+    letter-spacing: -0.05em;
+    padding-bottom: 30px; }
+  .why_we hr {
+    width: 98px;
+    margin: auto;
+    border: 5px solid #FFCB00; }
+  .why_we__grid {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 30px; }
+    @media (min-width: 1199px) {
+      .why_we__grid {
+        grid-template-columns: repeat(5, 1fr); } }
+    .why_we__grid__content {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column; }
+      .why_we__grid__content__logo {
+        width: 90px; }
+        .why_we__grid__content__logo img {
+          width: 100%; }
+      .why_we__grid__content p {
+        font-size: 17px;
+        font-weight: normal;
+        color: #A0A09F;
+        line-height: 1.5em;
+        text-align: center; }
+
+.urgent {
+  width: 100%;
+  height: 100%;
+  background-color: #3A61CF;
+  padding: 30px 0; }
+  @media (min-width: 1199px) {
+    .urgent {
+      padding: 44px 0;
+      position: relative; } }
+  .urgent .container-sm {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 15px; }
+  .urgent__logo {
+    width: 90px; }
+    @media (min-width: 1199px) {
+      .urgent__logo {
+        width: 130px; } }
+    .urgent__logo svg {
+      width: 100%; }
+  .urgent h1 {
+    font-size: 24px;
+    color: #FFFFFF;
+    letter-spacing: normal;
+    line-height: 1em;
+    text-align: center;
+    font-weight: 1000; }
+    @media (min-width: 1199px) {
+      .urgent h1 {
+        font-size: 54px;
+        width: 60%;
+        margin: auto; } }
+  .urgent__button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 160px;
+    height: 100%;
+    padding: 10px;
+    color: #000000;
+    font-size: 15px;
+    background-color: #FFCB00;
+    font-weight: bold; }
+    .urgent__button:hover {
+      background-color: #FFFFFF;
+      border: 1px solid #000000; }
+
+.imagen {
+  width: 100%;
+  height: 200px;
+  background-image: url("https://static.wixstatic.com/media/914e21_c7dbbfe791c74650ae87356a9c8a40e7~mv2.png/v1/fill/w_1350,h_433,al_c,q_90,usm_1.20_1.00_0.01,enc_auto/914e21_c7dbbfe791c74650ae87356a9c8a40e7~mv2.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center; }
+  @media (min-width: 1199px) {
+    .imagen {
+      position: relative;
+      z-index: -2;
+      height: 500px; } }
+
 * {
   margin: 0;
   padding: 0;
