--- a/scss/components/_imagen.scss
+++ b/scss/components/_imagen.scss
@@ -5,6 +5,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    filter:brightness(60%);
 
     @media(min-width: 1199px){
         position: relative;
