--- a/scss/components/_experts.scss
+++ b/scss/components/_experts.scss
@@ -56,7 +56,7 @@
                 width: 100%;
                 height: 100%;
                 position: relative;
-                
+                filter:brightness(60%);
                 z-index:-1;
                 object-fit: cover;
             }
@@ -87,9 +87,31 @@
             margin-top: 60px;
             background-color: $mikado_yellow;
             font-size: 21px;
-            color: black;
             padding: 10px;
+            animation-name:butt;
+            animation-duration: 2s;
+            animation-iteration-count:initial;
 
+            @media(min-width:1199px){
+                @keyframes butt {
+                    0%{
+                        opacity: 0;
+                        width: 0%;
+                        color: transparent;
+                    }
+        
+                    90%{
+                        opacity: 1;
+                        width: 6%;
+                    }
+    
+                    100%{
+                        color: $black;
+                    }
+                    
+                }
+            }
+            
             &:hover{
                 background-color: $white;
                 border: 1px solid black;
