--- a/scss/components/_quote.scss
+++ b/scss/components/_quote.scss
@@ -1,3 +1,192 @@
 .quote{
+    width: 100%;
+    height: 100%;
+    padding: 30px 0;
+
+    @media(min-width: 1199px){
+        padding: 60px 0;
+    }
+
+    .container-sm{
+        @include flex-center-center;
+        flex-direction: column;
+    }
+    h1{
+        width: 50%;
+        line-height:25px;
+        text-align: center;
+        font-size: 34px;
+        letter-spacing: -0.05em;
+        color: $heavy_metal;
+
+        @media(min-width: 1199px){
+            font-size: 92px;
+            line-height:85px;
+        }
+    }
+
+    p{
+        width: 80%;
+        line-height: 1.5em;
+        text-align: center;
+        font-size: 18px;
+        letter-spacing: normal;
+        color:$star_dust;
+        font-weight: bold;
+        padding: 20px 0;
+
+        @media(min-width: 1199px){
+            font-size: 22px;
+        }
+    }
+
+    hr{
+        width: 98px;
+        margin: auto;
+        border: 5px solid $mikado_yellow;
+        animation-name: line;
+        animation-duration: 4s;
+        animation-iteration-count:initial;
+
+        @media(min-width:1199px){
+            @keyframes line {
+                0%{
+                    width: 0%
+                }
+    
+                100%{
+                    width: 98px;
+                }
+                
+            }
+        }
+
+    }
+
+    &__grid{
+        margin-top: 30px;
+        width:100%;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        animation-name: animation;
+        animation-duration: 4s;
+        animation-iteration-count:initial;
+
+        @media(min-width:1199px){
+            width: 80%;
+            @keyframes animation {
+                0%{
+                    transform: scale(0.1)
+                }
+                
+            }
+            
+        }
+    
+
+        &__modal_form{
+            width: 100%;
+
+            &--one{
+                background-image: url("https://static.wixstatic.com/media/914e21_4e0c9f87c0ea4521b0f3288a351408f5~mv2.jpg/v1/fill/w_490,h_222,al_c,q_80,usm_1.20_1.00_0.01,enc_auto/914e21_4e0c9f87c0ea4521b0f3288a351408f5~mv2.jpg");
+                background-position: center;
+                background-size: cover;
+                background-repeat: no-repeat;
+            }
+
+            &--two{
+                background-image: url("https://static.wixstatic.com/media/914e21_8d9d42d4833145aa9ac38aecf6d2aee0~mv2.jpg/v1/fill/w_490,h_222,al_c,q_80,usm_1.20_1.00_0.01,enc_auto/914e21_8d9d42d4833145aa9ac38aecf6d2aee0~mv2.jpg");
+                background-position: center;
+                background-size: cover;
+                background-repeat: no-repeat;
+            }
+
+            &--three{
+                background-image: url("https://static.wixstatic.com/media/914e21_3250938d743c46afba46bb437fd31de1~mv2.jpg/v1/fill/w_490,h_222,al_c,q_80,usm_1.20_1.00_0.01,enc_auto/914e21_3250938d743c46afba46bb437fd31de1~mv2.jpg");
+                background-position: center;
+                background-size: cover;
+                background-repeat: no-repeat;
+            }
+
+            &--four{
+                background-image: url("https://static.wixstatic.com/media/914e21_0a3f52f10a534e97bf2531aa363cec21~mv2.jpg/v1/fill/w_490,h_222,al_c,q_80,usm_1.20_1.00_0.01,enc_auto/914e21_0a3f52f10a534e97bf2531aa363cec21~mv2.jpg");
+                background-position: center;
+                background-size: cover;
+                background-repeat: no-repeat;
+
+            }
+
+            &--five{
+                background-image: url("https://static.wixstatic.com/media/914e21_dfe23d7d7baf4e4481513fa34159d3a6~mv2.jpg/v1/fill/w_490,h_222,al_c,q_80,usm_1.20_1.00_0.01,enc_auto/914e21_dfe23d7d7baf4e4481513fa34159d3a6~mv2.jpg");
+                background-position: center;
+                background-size: cover;
+                background-repeat: no-repeat;
+
+            }
+
+            &--six{
+                background-image: url("https://static.wixstatic.com/media/914e21_3ae773b01dd4449f911c416dd015b57b~mv2.jpg/v1/fill/w_490,h_222,al_c,q_80,usm_1.20_1.00_0.01,enc_auto/914e21_3ae773b01dd4449f911c416dd015b57b~mv2.jpg");
+                background-position: center;
+                background-size: cover;
+                background-repeat: no-repeat;
+
+            }
+
+            &__hoverModal{
+                @include flex-center-center;
+                flex-direction: column;
+                width: 100%;
+                height: 100%;
+                background-color:$green_white;
+                opacity: 0;
+                padding: 10px;
+
+                @media(min-width:1199px){
+                    padding: 20px;
+                }
+
+                h2{
+                    color: $black;
+                    font-size: 18px;
+                    padding-bottom: 10px;
+                    text-align: center;
+                }
+
+                p{
+                    color: $black;
+                    font-size: 16px;
+                    padding: 0;
+                    font-weight: normal;
+                }
+    
+    
+                &:hover{
+                    opacity: 1;
+                    cursor: pointer;
+                    transition: all 600ms;
+                }
+    
+            }
+        }
+
+        div{
+            display: flex;
+        }
+    }
+
+    &__button{
+        margin-top: 30px;
+        background-color:$mikado_yellow ; 
+        padding: 10px;
+        color: black;
+        font-size: 18px;
+        font-weight: bold;
+
+        &:hover{ 
+            background-color: $white;
+            border:1px solid black;
+        }
+
+    }
     
 }
