--- a/scss/components/_urgent.scss
+++ b/scss/components/_urgent.scss
@@ -17,9 +17,23 @@
 
     &__logo{
         width: 90px;
+        animation-name: icon;
+        animation-duration: 4s;
+        animation-iteration-count:initial;
 
-        @media(min-width: 1199px){
+        @media(min-width:1199px){
             width: 130px;
+            @keyframes icon {
+                0%{
+                    transform: translateX(-50%);
+                    opacity: 1;
+                }
+    
+                100%{
+                    opacity: 1;
+                }
+                
+            }
         }
 
         svg{
@@ -53,6 +67,29 @@
         font-size: 15px;
         background-color: $mikado_yellow;
         font-weight: bold;
+        animation-name:butt;
+        animation-duration: 2s;
+        animation-iteration-count:initial;
+
+            @media(min-width:1199px){
+                @keyframes butt {
+                    0%{
+                        opacity: 0;
+                        width: 0%;
+                        color: transparent;
+                    }
+        
+                    90%{
+                        opacity: 1;
+                        width: 160px;
+                    }
+    
+                    100%{
+                        color: $black;
+                    }
+                    
+                }
+            }
 
         &:hover{
             background-color: $white;
