--- a/scss/components/_we_ensure.scss
+++ b/scss/components/_we_ensure.scss
@@ -25,11 +25,13 @@
         border: 2px solid $mikado_yellow;
         position:absolute;
     }
+
     &__information{
         width: 100%;
         height: 100%;
         background-color: $white;
         display: none;
+        z-index: 2;
 
 
         &--left{
@@ -111,7 +113,7 @@
             @include flex-center-center;
             padding-right: 120px;
             animation-name: information;
-            animation-duration: 4s;
+            animation-duration: 2s;
             animation-iteration-count:initial;
            
         }
@@ -152,6 +154,23 @@
         
         &__icon{
             width: 90px;
+            animation-name: icon;
+            animation-duration: 4s;
+            animation-iteration-count:initial;
+
+            @media(min-width:1199px){
+                @keyframes icon {
+                    0%{
+                        transform: translateX(-50%);
+                        opacity: 1;
+                    }
+        
+                    100%{
+                        opacity: 1;
+                    }
+                    
+                }
+            }
             svg{
                 width: 100%;
                 height: 100%;
@@ -174,11 +193,42 @@
             margin: auto;
             border: 5px solid $mikado_yellow;
             margin-bottom: 20px;
+            animation-name: line;
+            animation-duration: 4s;
+            animation-iteration-count:initial;
+
+            @media(min-width:1199px){
+                @keyframes line {
+                    0%{
+                        width: 0%
+                    }
+        
+                    100%{
+                        width: 98px;
+                    }
+                    
+                }
+            }
+
         }
 
         p{
             font-size: 20px;
             text-align: center;
+            animation-name: sub;
+            animation-duration: 5s;
+            z-index: 0;
+    
+            @keyframes sub {
+                0%{
+                    opacity: 0; 
+                }
+              
+                100%{
+                    opacity: 1;
+                }
+                
+            }
 
             @media(min-width: 1199px){
                 width: 70%;
