--- a/scss/components/_why_we.scss
+++ b/scss/components/_why_we.scss
@@ -24,6 +24,22 @@
         width: 98px;
         margin: auto;
         border: 5px solid $mikado_yellow;
+        animation-name: line;
+        animation-duration: 4s;
+        animation-iteration-count:initial;
+
+            @media(min-width:1199px){
+                @keyframes line {
+                    0%{
+                        width: 0%
+                    }
+        
+                    100%{
+                        width: 98px;
+                    }
+                    
+                }
+            }
     }
 
     &__grid{
