--- a/css/main.css
+++ b/css/main.css
@@ -1161,6 +1161,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  background-attachment: fixed;
   filter: brightness(60%); }
   @media (min-width: 1199px) {
     .imagen {
