--- a/scss/globals/_colors.scss
+++ b/scss/globals/_colors.scss
@@ -10,6 +10,7 @@ $candlelight:#FFDA1F;
 $storm_dust:#5E5E5E;
 $carbon_grey:#605E5E;
 $star_dust:#A0A09F ;
+$grey_goose:#CFCFCF;
 
 $vibrant_green:#0EE62F;
 
