--- a/scss/main.scss
+++ b/scss/main.scss
@@ -26,6 +26,9 @@
 @import 'components/home/imagen';
 
 //*Components Units
+@import 'components/units/hero';
+@import 'components/units/catalog';
+
 
 
 
