--- a/css/main.css
+++ b/css/main.css
@@ -1169,6 +1169,154 @@
       z-index: -2;
       height: 500px; } }
 
+.hero {
+  width: 100%;
+  height: 100%; }
+  @media (min-width: 1199px) {
+    .hero {
+      background-image: url("https://static.wixstatic.com/media/914e21_58575822193d4c4fb1773e92c871fc0f~mv2.jpg/v1/fill/w_1350,h_383,al_c,q_85,usm_1.20_1.00_0.01,enc_auto/914e21_58575822193d4c4fb1773e92c871fc0f~mv2.jpg");
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+      background-attachment: fixed;
+      margin-top: 470px;
+      position: relative;
+      height: 600px; } }
+  .hero img {
+    width: 100%; }
+    @media (min-width: 1199px) {
+      .hero img {
+        display: none; } }
+  .hero__banner_top {
+    width: 100%;
+    height: auto;
+    background-color: rgba(250, 250, 250, 0.75);
+    padding: 20px 0; }
+    @media (min-width: 1199px) {
+      .hero__banner_top {
+        padding: 30px 0; } }
+    .hero__banner_top h1 {
+      width: 50%;
+      line-height: 30px;
+      text-align: center;
+      font-size: 36px;
+      letter-spacing: normal;
+      color: #000000;
+      padding-bottom: 20px;
+      margin: auto; }
+      @media (min-width: 1199px) {
+        .hero__banner_top h1 {
+          width: 100%;
+          font-size: 100px;
+          line-height: 90px; } }
+    .hero__banner_top hr {
+      width: 98px;
+      margin: auto;
+      border: 5px solid #FFCB00;
+      animation-name: line;
+      animation-duration: 4s;
+      animation-iteration-count: initial; }
+      @media (min-width: 1199px) {
+        @keyframes line {
+          0% {
+            width: 0%; }
+          100% {
+            width: 98px; } } }
+  .hero__banner_bottom {
+    width: 100%;
+    height: auto;
+    background-color: #2F2E2E;
+    padding: 20px 0; }
+    @media (min-width: 1199px) {
+      .hero__banner_bottom {
+        position: relative;
+        bottom: -25%;
+        padding: 30px 0;
+        z-index: 1; } }
+    .hero__banner_bottom .container-sm {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column; }
+    .hero__banner_bottom h2 {
+      width: 90%;
+      font-weight: bold;
+      font-style: normal;
+      font-size: 31px;
+      line-height: normal;
+      text-align: center;
+      color: #FFFFFF;
+      margin-bottom: 20px; }
+      @media (min-width: 1199px) {
+        .hero__banner_bottom h2 {
+          font-size: 75px; } }
+    .hero__banner_bottom h3 {
+      letter-spacing: 0em;
+      text-align: center;
+      font-size: 16px;
+      color: #FFCB00;
+      font-weight: normal; }
+      @media (min-width: 1199px) {
+        .hero__banner_bottom h3 {
+          font-size: 21px; } }
+    .hero__banner_bottom a {
+      letter-spacing: 0em;
+      text-align: center;
+      font-size: 20px;
+      color: #FFCB00;
+      font-weight: 900;
+      text-decoration: underline;
+      padding-bottom: 20px; }
+      @media (min-width: 1199px) {
+        .hero__banner_bottom a {
+          font-size: 29px; } }
+    .hero__banner_bottom p {
+      width: 80%;
+      text-align: center;
+      font-size: 20px;
+      color: #FFFFFF;
+      font-weight: 900;
+      text-decoration: underline;
+      line-height: normal; }
+      @media (min-width: 1199px) {
+        .hero__banner_bottom p {
+          font-size: 29px; } }
+
+.catalog {
+  width: 100%;
+  height: 100%;
+  padding: 20px 0; }
+  @media (min-width: 1199px) {
+    .catalog {
+      padding: 30px 0; } }
+  .catalog .container-sm {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px; }
+    @media (min-width: 1199px) {
+      .catalog .container-sm {
+        grid-template-columns: repeat(3, 1fr); } }
+  .catalog__units {
+    width: 100%;
+    background-color: #CFCFCF; }
+    .catalog__units__imagen {
+      width: 100%; }
+      .catalog__units__imagen img {
+        width: 100%; }
+    .catalog__units__text h1 {
+      font-size: 18px;
+      color: #3A61CF;
+      text-align: center;
+      font-weight: 900; }
+    .catalog__units__text p {
+      font-size: 13px;
+      text-align: center;
+      color: #000000;
+      white-space: pre-line;
+      padding-bottom: 5px; }
+    .catalog__units:hover .catalog__units__imagen img {
+      filter: opacity(70%); }
+
 * {
   margin: 0;
   padding: 0;
