--- a/css/main.css
+++ b/css/main.css
@@ -1168,11 +1168,11 @@
       z-index: -2;
       height: 500px; } }
 
-.hero {
+.hero_units {
   width: 100%;
   height: 100%; }
   @media (min-width: 1199px) {
-    .hero {
+    .hero_units {
       background-image: url("https://static.wixstatic.com/media/914e21_58575822193d4c4fb1773e92c871fc0f~mv2.jpg/v1/fill/w_1350,h_383,al_c,q_85,usm_1.20_1.00_0.01,enc_auto/914e21_58575822193d4c4fb1773e92c871fc0f~mv2.jpg");
       background-size: cover;
       background-repeat: no-repeat;
@@ -1181,20 +1181,20 @@
       margin-top: 470px;
       position: relative;
       height: 600px; } }
-  .hero img {
+  .hero_units img {
     width: 100%; }
     @media (min-width: 1199px) {
-      .hero img {
+      .hero_units img {
         display: none; } }
-  .hero__banner_top {
+  .hero_units__banner_top {
     width: 100%;
     height: auto;
     background-color: rgba(250, 250, 250, 0.75);
     padding: 20px 0; }
     @media (min-width: 1199px) {
-      .hero__banner_top {
+      .hero_units__banner_top {
         padding: 30px 0; } }
-    .hero__banner_top h1 {
+    .hero_units__banner_top h1 {
       width: 50%;
       line-height: 30px;
       text-align: center;
@@ -1207,7 +1207,7 @@
       animation-duration: 4s;
       animation-iteration-count: initial; }
       @media (min-width: 1199px) {
-        .hero__banner_top h1 {
+        .hero_units__banner_top h1 {
           width: 100%;
           font-size: 100px;
           line-height: 90px; }
@@ -1216,7 +1216,7 @@
             opacity: 0; }
           100% {
             opacity: 1; } } }
-    .hero__banner_top hr {
+    .hero_units__banner_top hr {
       width: 98px;
       margin: auto;
       border: 5px solid #FFCB00;
@@ -1229,23 +1229,23 @@
             width: 0%; }
           100% {
             width: 98px; } } }
-  .hero__banner_bottom {
+  .hero_units__banner_bottom {
     width: 100%;
     height: auto;
     background-color: #2F2E2E;
     padding: 20px 0; }
     @media (min-width: 1199px) {
-      .hero__banner_bottom {
+      .hero_units__banner_bottom {
         position: relative;
         bottom: -25%;
         padding: 30px 0;
         z-index: 1; } }
-    .hero__banner_bottom .container-sm {
+    .hero_units__banner_bottom .container-sm {
       display: flex;
       align-items: center;
       justify-content: center;
       flex-direction: column; }
-    .hero__banner_bottom h2 {
+    .hero_units__banner_bottom h2 {
       width: 90%;
       font-weight: bold;
       font-style: normal;
@@ -1255,18 +1255,18 @@
       color: #FFFFFF;
       margin-bottom: 20px; }
       @media (min-width: 1199px) {
-        .hero__banner_bottom h2 {
+        .hero_units__banner_bottom h2 {
           font-size: 75px; } }
-    .hero__banner_bottom h3 {
+    .hero_units__banner_bottom h3 {
       letter-spacing: 0em;
       text-align: center;
       font-size: 16px;
       color: #FFCB00;
       font-weight: normal; }
       @media (min-width: 1199px) {
-        .hero__banner_bottom h3 {
+        .hero_units__banner_bottom h3 {
           font-size: 21px; } }
-    .hero__banner_bottom a {
+    .hero_units__banner_bottom a {
       letter-spacing: 0em;
       text-align: center;
       font-size: 20px;
@@ -1275,9 +1275,9 @@
       text-decoration: underline;
       padding-bottom: 20px; }
       @media (min-width: 1199px) {
-        .hero__banner_bottom a {
+        .hero_units__banner_bottom a {
           font-size: 29px; } }
-    .hero__banner_bottom p {
+    .hero_units__banner_bottom p {
       width: 80%;
       text-align: center;
       font-size: 20px;
@@ -1286,7 +1286,7 @@
       text-decoration: underline;
       line-height: normal; }
       @media (min-width: 1199px) {
-        .hero__banner_bottom p {
+        .hero_units__banner_bottom p {
           font-size: 29px; } }
 
 .catalog {
@@ -1323,6 +1323,178 @@
       padding-bottom: 5px; }
     .catalog__units:hover .catalog__units__imagen img {
       filter: opacity(70%); }
+
+.hero_services {
+  width: 100%;
+  height: 100%; }
+  @media (min-width: 1199px) {
+    .hero_services {
+      background-image: url("https://static.wixstatic.com/media/914e21_d35a86a1b60c4abb853683eb5844e42f~mv2.png/v1/fill/w_1350,h_444,al_b,q_90,usm_1.20_1.00_0.01,enc_auto/914e21_d35a86a1b60c4abb853683eb5844e42f~mv2.png");
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+      background-attachment: fixed;
+      margin-top: 470px;
+      position: relative;
+      height: 300px; } }
+  .hero_services img {
+    width: 100%; }
+    @media (min-width: 1199px) {
+      .hero_services img {
+        display: none; } }
+  .hero_services__banner_top {
+    width: 100%;
+    height: auto;
+    background-color: rgba(250, 250, 250, 0.75);
+    padding: 20px 0; }
+    @media (min-width: 1199px) {
+      .hero_services__banner_top {
+        padding: 30px 0; } }
+    .hero_services__banner_top h1 {
+      width: 50%;
+      line-height: 30px;
+      text-align: center;
+      font-size: 36px;
+      letter-spacing: normal;
+      color: #000000;
+      padding-bottom: 20px;
+      margin: auto;
+      animation-name: text;
+      animation-duration: 4s;
+      animation-iteration-count: initial; }
+      @media (min-width: 1199px) {
+        .hero_services__banner_top h1 {
+          width: 100%;
+          font-size: 100px;
+          line-height: 90px; }
+        @keyframes text {
+          0% {
+            opacity: 0; }
+          100% {
+            opacity: 1; } } }
+    .hero_services__banner_top hr {
+      width: 98px;
+      margin: auto;
+      border: 5px solid #FFCB00;
+      animation-name: line;
+      animation-duration: 4s;
+      animation-iteration-count: initial; }
+      @media (min-width: 1199px) {
+        @keyframes line {
+          0% {
+            width: 0%; }
+          100% {
+            width: 98px; } } }
+
+.we_services {
+  width: 100%;
+  height: 100%;
+  padding: 30px 0; }
+  @media (min-width: 1199px) {
+    .we_services {
+      padding: 60px 20%; } }
+  .we_services .container-sm {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 40px; }
+    @media (min-width: 1199px) {
+      .we_services .container-sm {
+        grid-template-columns: repeat(3, 1fr);
+        gap: 10px; } }
+  .we_services__service {
+    width: 100%; }
+    .we_services__service__imagen {
+      width: 55px;
+      margin: auto; }
+      @media (min-width: 1199px) {
+        .we_services__service__imagen {
+          width: 160px;
+          margin: 0; } }
+      .we_services__service__imagen img {
+        width: 100%; }
+    .we_services__service h1 {
+      font-size: 20px;
+      color: #5E5E5E;
+      text-align: center;
+      font-weight: 900; }
+      @media (min-width: 1199px) {
+        .we_services__service h1 {
+          text-align: start; } }
+    .we_services__service__text {
+      width: 90%;
+      padding-top: 30px;
+      margin-left: 30px; }
+      .we_services__service__text li {
+        letter-spacing: normal;
+        font-size: 20px;
+        color: #A0A09F; }
+      .we_services__service__text p {
+        font-size: 20px;
+        text-align: center;
+        color: #000000;
+        white-space: pre-line;
+        padding-bottom: 5px; }
+
+.contact {
+  width: 100%;
+  height: 100%;
+  padding: 30px 0; }
+  @media (min-width: 1199px) {
+    .contact {
+      padding: 60px 0; } }
+  .contact .container-sm {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column; }
+  .contact a {
+    line-height: 1.2em;
+    text-align: center;
+    font-size: 22px;
+    color: #2F2E2E;
+    text-decoration: underline;
+    letter-spacing: 0;
+    font-weight: 900; }
+    @media (min-width: 1199px) {
+      .contact a {
+        font-size: 54px; } }
+  .contact h1 {
+    width: 70%;
+    font-size: 22px;
+    color: #2F2E2E;
+    text-align: center;
+    padding: 10px 0; }
+    @media (min-width: 1199px) {
+      .contact h1 {
+        width: 100%;
+        font-size: 75px;
+        padding: 30px 0; } }
+  .contact hr {
+    width: 98px;
+    margin: auto;
+    border: 5px solid #FFCB00;
+    animation-name: line;
+    animation-duration: 4s;
+    animation-iteration-count: initial; }
+    @media (min-width: 1199px) {
+      @keyframes line {
+        0% {
+          width: 0%; }
+        100% {
+          width: 98px; } } }
+
+.image_services {
+  width: 100%;
+  height: 200px;
+  background-image: url("https://static.wixstatic.com/media/914e21_b87c4e9a10ae4280b3e27dbd2dc74459~mv2.png/v1/fill/w_1350,h_444,al_c,q_90,usm_1.20_1.00_0.01,enc_auto/914e21_b87c4e9a10ae4280b3e27dbd2dc74459~mv2.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed; }
+  @media (min-width: 1199px) {
+    .image_services {
+      z-index: -2;
+      height: 600px; } }
 
 * {
   margin: 0;
